[package]
name = "pa-smooth-volume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "pasvd"

[dependencies]
clap = { version = "3.2.22", features = ["cargo"] }
libc = { version = "0.2", default-features = false }
libpulse-binding = "2.26.0"
